@@ -1,6 +1,6 @@
 // TortoiseMerge - a Diff/Patch program
 
-// Copyright (C) 2006-2007 - TortoiseSVN
+// Copyright (C) 2006-2008 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -128,7 +128,12 @@ bool CLeftView::OnContextMenu(CPoint point, int /*nLine*/, DiffStates state)
 						bottomstate.linestates[i] = m_pwndBottom->m_pViewData->GetState(i);
 						m_pwndBottom->m_pViewData->SetState(i, m_pViewData->GetState(i));
 						if (m_pwndBottom->IsLineConflicted(i))
-							m_pwndBottom->m_pViewData->SetState(i, DIFFSTATE_CONFLICTRESOLVED);
+						{
+							if (m_pViewData->GetState(i) == DIFFSTATE_CONFLICTEMPTY)
+								m_pwndBottom->m_pViewData->SetState(i, DIFFSTATE_CONFLICTRESOLVEDEMPTY);
+							else
+								m_pwndBottom->m_pViewData->SetState(i, DIFFSTATE_CONFLICTRESOLVED);
+						}
 					}
 					m_pwndBottom->SetModified();
 				}
@@ -187,7 +192,12 @@ bool CLeftView::OnContextMenu(CPoint point, int /*nLine*/, DiffStates state)
 						bottomstate.linestates[i] = m_pwndBottom->m_pViewData->GetState(i);
 						m_pwndBottom->m_pViewData->SetState(i, m_pViewData->GetState(i));
 						if (m_pwndBottom->IsLineConflicted(i))
-							m_pwndBottom->m_pViewData->SetState(i, DIFFSTATE_CONFLICTRESOLVED);
+						{
+							if (m_pViewData->GetState(i) == DIFFSTATE_CONFLICTEMPTY)
+								m_pwndBottom->m_pViewData->SetState(i, DIFFSTATE_CONFLICTRESOLVEDEMPTY);
+							else
+								m_pwndBottom->m_pViewData->SetState(i, DIFFSTATE_CONFLICTRESOLVED);
+						}
 					}
 					m_pwndBottom->SetModified();
 				}
